--- a/packages/patternfly-3/react-console/package.json
+++ b/packages/patternfly-3/react-console/package.json
@@ -35,7 +35,9 @@
   },
   "dependencies": {
     "@novnc/novnc": "^1.0.0",
+    "blob-polyfill": "^3.0.20180112",
     "classnames": "^2.2.5",
+    "file-saver": "^1.3.8",
     "patternfly": "^3.52.1",
     "patternfly-react": "^2.10.0",
     "xterm": "^3.3.0"
